crates/ruff_python_parser/tests/snapshots/invalid_syntax@f_string_invalid_conversion_flag_name_tok.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/f_string_invalid_conversion_flag_name_tok.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..9,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..8,
                    value: FString(
                        ExprFString {
                            node_index: NodeIndex(None),
                            range: 0..8,
                            value: FStringValue {
                                inner: Single(
                                    FString {
                                        range: 0..8,
                                        node_index: NodeIndex(None),
                                        elements: [
                                            Interpolation(
                                                InterpolatedElement {
                                                    range: 2..7,
                                                    node_index: NodeIndex(None),
                                                    expression: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(None),
                                                            range: 3..4,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    debug_text: None,
                                                    conversion: None,
                                                    format_spec: None,
                                                    runtime_str: None,
                                                    runtime_interpolation_format_spec: None,
                                                    runtime_formatted_value_format_spec: None,
                                                },
                                            ),
                                        ],
                                        flags: FStringFlags {
                                            quote_style: Double,
                                            prefix: Regular,
                                            triple_quoted: false,
                                            unclosed: false,
                                        },
                                    },
                                ),
                            },
                            runtime_joined_str: None,
                            runtime_values: None,
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | f"{x!z}"
  |      ^ Syntax Error: f-string: invalid conversion character
